# ELEARNING4

python-app-2025/: .env.example  .gitignore  README.md  app.db  pyproject.toml
python-app-2025/src/: app.db
python-app-2025/src/app/: main.py
python-app-2025/src/app/api/v1/: routes_auth.py  routes_blog.py  routes_private.py  routes_public.py  routes_user.py
python-app-2025/src/app/core/: config.py  constants.py  globals.py  security.py
python-app-2025/src/app/db/: init_db.py  models.py  session.py
python-app-2025/src/app/schemas/: auth.py  blog.py  request.py  response.py  user.py
python-app-2025/src/app/services/: auth_service.py  blog_service.py  user_service.py
